# netweft

./: .gitignore  APPLY.md  Cargo.toml  LICENSE  README.md  VERIFICATION.md
docs/: ADAPTERS.md  ARCHITECTURE.md  CONFIGURATION.md  GETTING-STARTED.md  GUIDE.md  NGINX-ADAPTER.md  PROXY-MODEL.md  README.md  REFACTOR-0.2.md
docs/adapters/: BIND.md  CLOUDFLARE.md  DOCKER.md  ENV.md  NETPLAN.md  NGINX.md  PROXMOX-GUESTS.md  PROXMOX-SDN.md  PROXMOX-STORAGE.md  PROXMOX.md  README.md  SSH.md  SYNOLOGY-NFS-PERMISSIONS.md  SYSTEMD-MOUNTS.md
docs/configuration/: ALLOCATIONS.md  CLOUDFLARE.md  DNS.md  DOCKER.md  EXAMPLE-TOPOLOGY.md  GUESTS.md  INVENTORY.md  LOCATIONS.md  MOUNTS.md  NAS-PERMISSIONS.md  NETWEFT.md  NETWORKS.md  OPTION-INDEX.md  PROXMOX-SDN.md  PROXMOX-STORAGES.md  README.md  SERVICES.md  SSH.md
docs/deployment/: BIND.md  CERTIFICATES.md  CLOUDFLARE.md  CROSS-HOST-TRANSFER.md  DOCKER.md  ENV.md  NETPLAN.md  NGINX.md  PROXMOX-GUESTS.md  PROXMOX-SDN.md  PROXMOX-STORAGE.md  PROXMOX.md  README.md  SSH.md  SYNOLOGY-NFS-PERMISSIONS.md  SYSTEMD-MOUNTS.md
docs/development/: ADAPTERS.md  README.md  REFACTOR-0.2.md  TESTING.md
docs/operations/: README.md  ROLLBACK.md  TROUBLESHOOTING.md  VERIFICATION.md
src/: cli.rs  lib.rs  main.rs  paths.rs  validate.rs
src/adapter/: artifact.rs  mod.rs  registry.rs
src/adapters/: bind.rs  cloudflare.rs  docker.rs  env.rs  mod.rs  (+9 more)
tests/: adapters.rs  cloudflare_adapter.rs  compatibility.rs  dns_access.rs  host_network_plan.rs  host_network_schema.rs  host_network_validation.rs  nginx_adapter.rs  proxmox_adapter.rs  proxy.rs
(+48 files in other folders)
